- core.py - added method "clear_layer" to clear all objects in specified layers
          - quickplot method added size option to set figure size
          - append method: added arguments to rotates and move appending structure
- plotting.py - reworked ColorHandler class with updated move_layer method
              - new methods: bring_to_front, send_to_back, bring_foward, send_backward

0.5.3
----------------
- naming optimization in Anchors and Skeletone methods
- removed moveby and move_by_snap -> instead not all handled in 'move' method
- added hard deprecation warnings to dublicate methods in core.py
- improved gmsher class (dataclasses added for mesh settings)
- added surfaces support in gmsher
- added more mesh settings in gmsher
- added more examples for gmsher usage
- small fixes and optimizations
- added palacer, integration with AWS palacer
- added tutorial for palacer usage

0.5.2
----------------
Improved Readthedoc build and cleaned up all the docstrings

0.5.1
----------------
Added initial Readthedoc documentation page and published in PyPI

0.5.0
----------------
New features:
- Edited docstrings in:
    core.py
    utils.py
    functions.py
    plotting.py
    routing.py
    supercore.py
    anchors.py
    geometries.py
- Added 'colors' attribute to the Base class.
- Added method "change_color" to the Base class.
- Added label functionality to the "plot" method.
- Removed the need for a plot_config in the "quickplot" method. 
- Added small type checks for several methods and functions to ensure input validity.

0.4.4
----------------
New features:
- Added functions in utils.py: 
    oriented_angle                  Calculate the oriented angle
    find_nearest_point_index        Finds the index of the closest point in a Shapely polygon to a given point.
    round_polygon_corner            Rounds one corner of a Shapely polygon.
    replace_closest_polygon         Replaces the closest polygon in a MultiPolygon with a new polygon.